--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -137,7 +137,7 @@
     transition: .5s;
     margin: 25px 0;
     padding: 12px 10px;
-    width: 150px;
+    width: fit-content;
     text-align: center;
     display: flex;
 }
