--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -138,7 +138,7 @@
     margin: 25px 0;
     padding: 12px 10px;
     width: max-content;
-    text-align: center;
+    align-items: center;
     display: flex;
     white-space: nowrap;
 
