--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,4 +1,3 @@
-/* Reset*/
 * {
     padding: 0;
     margin: 0;
@@ -6,7 +5,11 @@
     box-sizing: border-box;
 }
 
-/* Variables*/
+body {
+    background-color: var(--about-bg-color);
+    margin: 0;
+    padding: 0;
+}
 
 :root {
     --main-color: lightgreen;
@@ -17,12 +20,12 @@
     --about-bg-color: #111821;
 }
 
-/* General*/
+
 .highlight {
     color: var(--main-color);
 }
 
-/*Containers*/
+
 #container {
     display: flex;
     flex-direction: row;
@@ -30,28 +33,37 @@
 }
 
 #bio-container {
-    flex: 1 1 20%;
-    min-height: 100vh;
+
+    width: 20%;
     background-color: var(--bio-bg-color);
     text-align: center;
-    padding: 30px 12px;
     border-right: 5px solid var(--bio-border-color);
+    position: sticky;
+    top: 0;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 12px;
+    box-sizing: border-box;
+    gap: 2px;
+}
+
+#bio-container img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 350px;
+    height: auto;
 }
 
 #about-container {
-    flex: 1 1 80%;
+    flex: 1 1 20%;
     min-height: 100vh;
     background-color: var(--about-bg-color);
-    padding: 50px;
-}
-
-/*Bio container*/
-#bio-container h2 {
-    margin-bottom: 25px;
-}
-
-#bio-container p {
-    margin-bottom: 20px;
+    padding: 0 20px;
+    text-align: left;
 }
 
 #bio-container #welcome-text {
@@ -118,21 +130,45 @@
     margin-bottom: 15px;
     font-weight: bold;
 }
-.project-description {
+
+.project-description h2,
+h3 {
     text-align: center;
-    margin-bottom: 20px;
+}
+
+
+.project-description p {
+    margin-top: 15px;
+}
+
+
+#project-title {
+    text-align: center;
+    margin-bottom: 5px;
 }
 
 .description {
     max-width: 75%;
-    margin: 0 auto 10px auto;
+    margin: 0 auto;
     line-height: 1.6;
     font-size: 1.1rem;
     color: #ccc;
+    padding: 5px 30px;
+    text-align: left;
 }
 
+.description-header {
+    max-width: 75%;
+    margin: 50px auto 10px auto;
+    line-height: 1.6;
+    font-size: 1.1rem;
+    color: #ccc;
+    margin-bottom: 30px;
+    padding: 30px;
+}
+
+
 h2 {
-    /* Supondo que "Minhas Skills" seja um h2 */
     font-size: 2rem;
     margin-bottom: 25px;
     border-left: 5px solid var(--main-color);
@@ -225,7 +261,6 @@ h2 {
     margin-right: 10px;
 }
 
-/* Mobile */
 @media(max-width: 450px) {
     #container {
         flex-direction: column;
@@ -273,24 +308,17 @@ h2 {
     }
 }
 
-    .project-image {
-        display: flex;
-        /* Transforma o container em flexbox */
-        justify-content: center;
-        /* Centraliza horizontalmente */
-        margin: 20px 0;
-        /* Adiciona um respiro em cima e embaixo */
-        width: 100%;
-        /* Garante que a div ocupe a largura total disponível */
-    }
+.project-image {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+    width: 100%;
+}
 
-    .project-image img {
-        max-width: 700px;
-        /* Define o tamanho máximo que você quer (substituindo o do HTML) */
-        width: 100%;
-        /* Faz com que ela seja responsiva (diminua em telas menores) */
-        height: auto;
-        border-radius: 8px;
-        border: 1px solid var(--border-color);
-        /* Um toque de design para suavizar as pontas */
-    }
+.project-image img {
+    max-width: 700px;
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+    border: 1px solid var(--border-color);
+}
