--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -36,7 +36,7 @@ body {
 
     width: 20%;
     background-color: var(--bio-bg-color);
-    text-align: center;
+    text-align: left;
     border-right: 5px solid var(--bio-border-color);
     position: sticky;
     top: 0;
@@ -44,7 +44,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: left;
     padding: 0px 12px;
     box-sizing: border-box;
     gap: 2px;
@@ -68,6 +68,7 @@ body {
 
 #bio-container #welcome-text {
     font-weight: bold;
+    margin-top: 20px;
 }
 
 #bio-image {
